--- a/src/Todo/app/src/main/res/layout/activity_main.xml
+++ b/src/Todo/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,142 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+    <data>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </data>
+
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".main.MainActivity"
+            android:layout_margin="5dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/top_layout"
+                android:layout_gravity="top"
+                android:layout_width="match_parent"
+                android:layout_height="50dp">
+
+            <ImageButton
+                    android:id="@+id/check_all_button"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/task_name_edittext"
+                    app:layout_constraintHorizontal_chainStyle="spread_inside"
+                    app:layout_constraintHorizontal_weight="0.1"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="#00000000"
+                    android:src="@drawable/down_when_selecting_allitem"/>
+
+            <EditText
+                    android:id="@+id/task_name_edittext"
+                    app:layout_constraintStart_toEndOf="@id/check_all_button"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_chainStyle="spread_inside"
+                    app:layout_constraintHorizontal_weight="0.9"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:hint="@string/taskname_hint"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/middle_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="50dp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/task_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+            </androidx.recyclerview.widget.RecyclerView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/bottom_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom">
+
+            <TextView
+                    android:id="@+id/left_item_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12dp"
+                    android:text="X item left"
+                    android:textAlignment="center"
+                    android:padding="4dp"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/all_togglebutton"/>
+
+            <TextView
+                    android:id="@+id/all_togglebutton"
+                    android:layout_width="30dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="12dp"
+                    android:text="all"
+                    android:textAlignment="center"
+                    android:padding="4dp"
+                    android:background="@drawable/border_background"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/left_item_textview"
+                    app:layout_constraintEnd_toStartOf="@+id/active_togglebutton"/>
+
+            <TextView
+                    android:id="@+id/active_togglebutton"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="12dp"
+                    android:text="Active"
+                    android:textAlignment="center"
+                    android:padding="4dp"
+                    android:background="@drawable/border_background"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/all_togglebutton"
+                    app:layout_constraintEnd_toStartOf="@+id/completed_togglebutton"/>
+
+            <TextView
+                    android:id="@+id/completed_togglebutton"
+                    android:layout_width="70dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="12dp"
+                    android:text="Completed"
+                    android:textAlignment="center"
+                    android:padding="4dp"
+                    android:background="@drawable/border_background"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/active_togglebutton"
+                    app:layout_constraintEnd_toStartOf="@+id/clear_togglebutton"/>
+
+            <TextView
+                    android:id="@+id/clear_togglebutton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12dp"
+                    android:text="Clear completed"
+                    android:textAlignment="center"
+                    android:padding="4dp"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/completed_togglebutton"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </FrameLayout>
+</layout>
