--- a/src/Todo/app/src/main/res/layout/task_item.xml
+++ b/src/Todo/app/src/main/res/layout/task_item.xml
@@ -4,31 +4,41 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <variable name="task" type="kaleidot725.todo.model.Task"/>
+        <variable name="vm" type="kaleidot725.todo.main.TaskViewModel"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp">
 
-        <CheckBox
-                android:id="@+id/checked"
+        <LinearLayout
+                android:id="@+id/checked_container"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintEnd_toStartOf="@+id/name"/>
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintEnd_toStartOf="@+id/name">
+            <CheckBox
+                    android:id="@+id/checked"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:checked="@={vm.checked}"
+                    android:onClick="@{vm::check}"
+                    android:background="#00000000"/>
+        </LinearLayout>
 
         <TextView
                 android:id="@+id/name"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:gravity="center_vertical"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:text="Task Name"
-                app:layout_constraintStart_toEndOf="@+id/checked"
+                android:text="@={vm.name}"
+                android:onLongClick="@{vm::rename}"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/checked_container"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintEnd_toStartOf="@+id/delete"/>
 
@@ -36,8 +46,7 @@
                 android:id="@+id/delete"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground"
+                android:onClick="@{vm::delete}"
                 android:background="#00000000"
                 app:layout_constraintTop_toTopOf="parent"
                 android:src="@drawable/delete"
