--- a/src/Todo/app/src/main/res/layout/activity_main.xml
+++ b/src/Todo/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <variable name="vm" type="kaleidot725.todo.main.MainViewModel"/>
     </data>
 
     <FrameLayout
@@ -27,6 +27,8 @@
                     app:layout_constraintEnd_toStartOf="@id/task_name_edittext"
                     app:layout_constraintHorizontal_chainStyle="spread_inside"
                     app:layout_constraintHorizontal_weight="0.1"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:background="#00000000"
