--- a/src/Todo/app/src/main/res/layout/activity_main.xml
+++ b/src/Todo/app/src/main/res/layout/activity_main.xml
@@ -27,13 +27,11 @@
                     app:layout_constraintEnd_toStartOf="@id/task_name_edittext"
                     app:layout_constraintHorizontal_chainStyle="spread_inside"
                     app:layout_constraintHorizontal_weight="0.1"
-                    android:clickable="true"
-                    android:foreground="?android:attr/selectableItemBackground"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:background="#00000000"
                     android:onClick="@{vm::check}"
-                    android:src="@drawable/down"/>
+                    android:src="@drawable/down_icon"/>
 
             <EditText
                     android:id="@+id/task_name_edittext"
@@ -56,13 +54,11 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_chainStyle="spread_inside"
                     app:layout_constraintHorizontal_weight="0.1"
-                    android:clickable="true"
-                    android:foreground="?android:attr/selectableItemBackground"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:background="#00000000"
                     android:onClick="@{vm::add}"
-                    android:src="@drawable/plus"/>
+                    android:src="@drawable/plus_icon"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -74,6 +70,8 @@
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/task_list"
+                    android:listSelector="@android:color/transparent"
+                    android:overScrollMode="never"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
             </androidx.recyclerview.widget.RecyclerView>
@@ -83,76 +81,80 @@
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/bottom_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="25dp"
                 android:layout_gravity="bottom">
 
-            <TextView
+            <Button
                     android:id="@+id/left_item_textview"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="12dp"
+                    android:layout_height="25dp"
+                    android:textSize="10dp"
                     android:text="@{vm.leftCount}"
                     android:textAlignment="center"
                     android:padding="4dp"
+                    android:background="@android:color/transparent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/all_togglebutton"/>
 
-            <TextView
+            <ToggleButton
                     android:id="@+id/all_togglebutton"
                     android:layout_width="30dp"
-                    android:layout_height="wrap_content"
-                    android:textSize="12dp"
-                    android:text="all"
+                    android:layout_height="25dp"
+                    android:textSize="10dp"
+                    android:textOn="All"
+                    android:textOff="All"
+                    android:checked="@={vm.allChecked}"
                     android:textAlignment="center"
                     android:padding="4dp"
-                    android:background="@drawable/border_background"
+                    android:background="@drawable/selectbutton_background"
                     android:onClick="@{vm::selectAll}"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/left_item_textview"
                     app:layout_constraintEnd_toStartOf="@+id/active_togglebutton"/>
 
-            <TextView
+            <ToggleButton
                     android:id="@+id/active_togglebutton"
                     android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:textSize="12dp"
-                    android:text="Active"
+                    android:layout_height="25dp"
+                    android:textSize="10dp"
+                    android:textOn="Active"
+                    android:textOff="Active"
+                    android:checked="@={vm.activeChecked}"
                     android:textAlignment="center"
                     android:padding="4dp"
-                    android:background="@drawable/border_background"
-                    android:clickable="true"
-                    android:foreground="?android:attr/selectableItemBackground"
+                    android:background="@drawable/selectbutton_background"
                     android:onClick="@{vm::selectActive}"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/all_togglebutton"
                     app:layout_constraintEnd_toStartOf="@+id/completed_togglebutton"/>
 
-            <TextView
+            <ToggleButton
                     android:id="@+id/completed_togglebutton"
                     android:layout_width="70dp"
-                    android:layout_height="wrap_content"
-                    android:textSize="12dp"
-                    android:text="Completed"
+                    android:layout_height="25dp"
+                    android:textSize="10dp"
+                    android:textOn="Completed"
+                    android:textOff="Completed"
                     android:textAlignment="center"
+                    android:checked="@={vm.completedChecked}"
                     android:padding="4dp"
-                    android:background="@drawable/border_background"
+                    android:background="@drawable/selectbutton_background"
                     android:onClick="@{vm::selectCompleted}"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/active_togglebutton"
                     app:layout_constraintEnd_toStartOf="@+id/clear_togglebutton"/>
 
-            <TextView
+            <Button
                     android:id="@+id/clear_togglebutton"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="12dp"
+                    android:layout_height="25dp"
+                    android:textSize="10dp"
                     android:text="Clear completed"
                     android:textAlignment="center"
-                    android:padding="4dp"
-                    android:clickable="true"
-                    android:foreground="?android:attr/selectableItemBackground"
+                    android:padding="2dp"
                     android:onClick="@{vm::clearCompleted}"
+                    android:background="@android:color/transparent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/completed_togglebutton"
                     app:layout_constraintEnd_toEndOf="parent"/>
