--- a/src/Todo/app/src/main/res/layout/task_item.xml
+++ b/src/Todo/app/src/main/res/layout/task_item.xml
@@ -50,7 +50,7 @@
                 android:onClick="@{vm::delete}"
                 android:background="#00000000"
                 app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/delete"
+                android:src="@drawable/delete_icon"
                 app:layout_constraintStart_toEndOf="@+id/name"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintEnd_toEndOf="parent"/>
